# sbpf

./: Cargo.toml  README.md
.github/workflows/: ci.yml
crates/assembler/src/: ast.rs  astnode.rs  debuginfo.rs  dynsym.rs  header.rs  lib.rs  macros.rs  parser.rs  program.rs  section.rs
crates/common/src/: decode.rs  errors.rs  inst_param.rs  instruction.rs  opcode.rs  syscalls_map.rs
crates/disassembler/src/: elf_header.rs  errors.rs  lib.rs  program.rs  program_header.rs  relocation.rs  section_header.rs  section_header_entry.rs
crates/sbpf-syscall-map/: test_hash.rs
crates/sbpf-syscall-map/src/: dynamic_map.rs  hash.rs  static_map.rs
src/commands/: common.rs  disassemble.rs
tests/: utils.rs
