[package]
name = "sbpf"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
description = "A complete toolchain for building and deploying Solana BPF assembly programs"
readme = "README.md"
keywords = ["solana", "bpf", "blockchain", "assembler"]
categories = ["development-tools", "command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.86"
clap = { version = "4.5.13", features = ["derive"] }
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
either = { workspace = true }
rand = "0.8.5"
serde_json = "1.0.122"
serde = { version = "1.0", features = ["derive"] }
codespan-reporting = "0.12.0"
termcolor = "1.4"

sbpf-assembler = { workspace = true }
sbpf-disassembler = { workspace = true }

[dev-dependencies]
hex-literal = "0.4.1"

[workspace]
members = ["crates/assembler", "crates/common", "crates/disassembler", "crates/sbpf-syscall-map"]
exclude = ["examples"]

[workspace.package]
version = "0.1.5"
edition = "2024"
license = "MIT"
repository = "https://github.com/blueshift-gg/sbpf"
authors = ["Dean Little <dean@blueshift.gg>", "Claire Fan <claire@blueshift.gg>"]
rust-version = "1.90"

[workspace.dependencies]
anyhow = "1.0.86"
either = { version = "1.15.0", features = ["serde"] }
num-derive = "0.4"
num-traits = "0.2"
object = "0.37.3"
thiserror = "2.0.12"

sbpf-assembler = { path = "crates/assembler", version = "0.1.5" }
sbpf-disassembler = { path = "crates/disassembler", version = "0.1.5" }
sbpf-common = { path = "crates/common", version = "0.1.5" }
sbpf-syscall-map = { path = "crates/sbpf-syscall-map", version = "0.1.5" }
